--- a/src/components/UI/MyLike/MyLike.module.scss
+++ b/src/components/UI/MyLike/MyLike.module.scss
@@ -2,6 +2,7 @@
 
 .like {
   margin-right: 5px;
+  cursor: pointer;
 
   &__wrapper {
     display: inline-flex;
@@ -13,6 +14,34 @@
     line-height: 22px;
     font-weight: 400;
     color: $text-color;
+  }
+
+  path:last-child {
+    visibility: hidden;
+  }
+
+  &:hover {
+    path:first-child {
+      fill: #FF0707;
+    }
+
+    path:last-child {
+      visibility: visible;
+    }
+  }
+
+  &_active {
+    cursor: pointer;
+    path:first-child {
+      fill: #FF0707;
+    }
+    path:last-child {
+      visibility: visible;
+    }
+  }
+
+  &_disabled {
+    margin-right: 5px;
   }
 }
 
