--- a/src/components/UI/UserInfo/UserInfo.module.scss
+++ b/src/components/UI/UserInfo/UserInfo.module.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
     align-items: center;
     gap: 13px;
-    //min-width: 141px;
+    margin-bottom: 10px;
 
   &__descr {
     display: flex;
@@ -28,7 +28,7 @@
   }
 
 .date {
-  font-size: 11px;
+  font-size: 12px;
   font-weight: 400;
   color: $text-color-secondary;
 }
